# rinha-2025

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.skylake  Dockerfile.worker  README.md  build-and-push.sh  dev.sh  docker-compose-old.yml  docker-compose.yml  nginx.conf
.github/workflows/: deploy.yml
src/: lib.rs  main.rs
src/api/: handlers.rs  mod.rs
src/application/: mod.rs  services.rs
src/domain/: entities.rs
src/infrastructure/: config.rs  health.rs  http_clients.rs  mod.rs  redis.rs  utils.rs  ws.rs
