[package]
name = "rinha2025"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[profile.release]
debug = false
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"


[dependencies]
axum = "0.8.4"
tokio = {version = "1.46.1", features = ["full"]}
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde_json = "1.0.140"
redis = {version = "0.32.3", features = ["tokio-comp", "connection-manager", "cluster", "cluster-async"] }
chrono = "0.4.41"
once_cell = "1.21.3"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
num_cpus = "1.17.0"

tokio-tungstenite = "0.21"
tungstenite = "0.21"
futures = "0.3"
anyhow = "1.0.98"
url = "2.5.4"
